--- a/Vertical Slider/index.html
+++ b/Vertical Slider/index.html
@@ -28,10 +28,10 @@
         </div>
       </div>
       <div class="right-slide">
-        <div style="background-image: url('images/flying_eagle.jpg')"></div>
-        <div style="background-image: url('images/lonely_castle.jpg')"></div>
-        <div style="background-image: url('images/bluuue_sky.jpg')"></div>
-        <div style="background-image: url('images/nature_flower.jpg')"></div>
+        <div style="background-image: url('image/flying_eagle.jpg')"></div>
+        <div style="background-image: url('image/lonely_castle.jpg')"></div>
+        <div style="background-image: url('image/bluuue_sky.jpg')"></div>
+        <div style="background-image: url('image/nature_flower.jpg')"></div>
       </div>
       <div class="action-buttons">
         <button class="down-button">
